# remote-mcp-server

./: CLOUDFLARE_ACCESS.md  CLOUDFLARE_ACCESS_SETUP.md  worker-configuration.d.ts  wrangler.jsonc
AI-Forge-Studio/: .gitignore  CMakeLists.txt  demo_cli.cpp  main.cpp
AI-Forge-Studio/core/: ai_engine.cpp  ai_engine.h  hardware_monitor.cpp  hardware_monitor.h  logger.cpp  logger.h  render_engine.cpp  render_engine.h
AI-Forge-Studio/docs/: BUILD.md  README.md
AI-Forge-Studio/python_bridge/: bridge.cpp  bridge.h  model_runner.py
AI-Forge-Studio/tests/: gpu_benchmark.cpp
AI-Forge-Studio/ui/: GlassCard.qml  GlowButton.qml  MetricRow.qml  NavButton.qml  dashboard.qml  main.qml  model_manager.qml  render_view.qml  settings.qml
AI-Forge-Studio/website/: CNAME  README.md  index.html  robots.txt  sitemap.xml
AI-Forge-Studio/website/css/: style.css
AI-Forge-Studio/website/docs/: getting-started.html
AI-Forge-Studio/website/js/: main.js
src/: app.ts  cloudflare-access-jwks.ts  index.ts  middleware.ts
